--- a/view/shopInfo.html
+++ b/view/shopInfo.html
@@ -28,20 +28,21 @@
             <div class="shop-info">真味一家</div>
             <div class="shop-score-area">
                 <div class="star-area">口碑评分：
-                                            <i class="icon iconfont star">&#xe641;</i>
-                                            <i class="icon iconfont star">&#xe641;</i>
-                                            <i class="icon iconfont star">&#xe641;</i>
-                                            <i class="icon iconfont star">&#xe641;</i>
-                                            <i class="icon iconfont star">&#xe641;</i>
-                                            <i class="icon iconfont star">&#xe641;</i>
-                                            <i class="icon iconfont star">&#xe641;</i>
-                                                        </div>
-                                <div class="star-desc star-7">孤独求败</div>
-                            </div>
+                    <i class="icon iconfont star">&#xe641;</i>
+                    <i class="icon iconfont star">&#xe641;</i>
+                    <i class="icon iconfont star">&#xe641;</i>
+                    <i class="icon iconfont star">&#xe641;</i>
+                    <i class="icon iconfont star">&#xe641;</i>
+                    <i class="icon iconfont star">&#xe641;</i>
+                    <i class="icon iconfont star">&#xe641;</i>
+                </div>
+                <div class="star-desc star-7">孤独求败</div>
+            </div>
             <div class="left_money">
-                <i class="icon iconfont">&#xe6f5;</i> 店铺状态 <span class="text-success">在线中</span>            </div>
+                <i class="icon iconfont">&#xe6f5;</i> 店铺状态 <span class="text-success">在线中</span>
+            </div>
             <div class="send-time">配送时间：11:20-13:00，17:20-20:30</div>
-                    </div>
+        </div>
         <div class="dining-wrap" >
             <div class="banner-tap">
                 <div class="item choose-goods cur">选购菜品</div>
@@ -52,22 +53,22 @@
                     <div class="fir-cate">
                         <span class="cate-list fir limit-text active" data-id="0">全部菜品</span>
                     </div>
-                                        <div class="fir-cate">
+                    <div class="fir-cate">
                         <span class="cate-list fir limit-text" data-id="612">餐盒</span>
-                                            </div>
-                                        <div class="fir-cate">
+                    </div>
+                    <div class="fir-cate">
                         <span class="cate-list fir limit-text" data-id="549">特色盖浇饭</span>
-                                            </div>
-                                        <div class="fir-cate">
+                    </div>
+                    <div class="fir-cate">
                         <span class="cate-list fir limit-text" data-id="550">特色炒菜（含米饭）</span>
-                                            </div>
-                                        <div class="fir-cate">
+                    </div>
+                    <div class="fir-cate">
                         <span class="cate-list fir limit-text" data-id="551">特色炒饭</span>
-                                            </div>
-                                        <div class="fir-cate">
+                    </div>
+                    <div class="fir-cate">
                         <span class="cate-list fir limit-text" data-id="552">特色炒面</span>
-                                            </div>
-                                    </div>
+                    </div>
+                </div>
                 <div class="dining-area">
                     <div class="dining-list">
                         <a href="./index.php?c=dining&a=goodsDetail&gid='+id+'&shop_id='+shop_id+'">
@@ -176,8 +177,8 @@
                     </tr>
                 </thead>
                 <tbody class="cart-goods-list">
-                                        <tr class="no-content"><td colspan="3"><i class="icon iconfont">&#xe78c;</i>不好意思！您的购物车空空~~哦！</td></tr>
-                                    </tbody>
+                     <tr class="no-content"><td colspan="3"><i class="icon iconfont">&#xe78c;</i>不好意思！您的购物车空空~~哦！</td></tr>
+                </tbody>
             </table>
         </div>
     </div>
