--- a/view/index.html
+++ b/view/index.html
@@ -101,7 +101,7 @@
         <div class="goods-area">
             <!-- 推荐商品 -->
             <!-- "./index.php?c=dining&a=shopInfo&shop_id='+id+'" -->
-            <a href="./shopInfo.html" class="goods-list">
+            <a href="./shopInfo.html?c=dining&a=shopInfo&shop_id=1" class="goods-list">
                 <img src="../image/20170523113702284_thumb.jpg" class="goods-img" />
                 <div class="goods-name limit-text">周黑鸭</div>
                 <div class="goods-address limit-text">口碑：<i class="icon iconfont star">&#xe641;</i><i class="icon iconfont unstar">&#xe642;</i><em style="color:green; padding-left:0px;font-size:16px;">99分</em></div>
@@ -111,7 +111,7 @@
                 <span style="color:#e57f23;">该时间段由商家配送至楼下，可预订送寝室</span>
                 <span class="goods-sale">月售100份</span>
             </a>
-            <a href="./shopInfo.html" class="goods-list">
+            <a href="./shopInfo.html?c=dining&a=shopInfo&shop_id=2" class="goods-list">
                 <img src="../image/20170523113702285_thumb.jpg" class="goods-img" />
                 <div class="goods-name limit-text">外婆饭</div>
                 <div class="goods-address limit-text">口碑：<i class="icon iconfont star">&#xe641;</i><i class="icon iconfont unstar">&#xe642;</i><em style="color:green; padding-left:0px;font-size:16px;">99分</em></div>
@@ -121,7 +121,7 @@
                 <span style="color:#e57f23;">该时间段由商家配送至楼下，可预订送寝室</span>
                 <span class="goods-sale">月售100份</span>
             </a>
-            <a href="./shopInfo.html" class="goods-list">
+            <a href="./shopInfo.html?c=dining&a=shopInfo&shop_id=3" class="goods-list">
                 <img src="../image/20170523113702286_thumb.jpg" class="goods-img" />
                 <div class="goods-name limit-text">华莱士</div>
                 <div class="goods-address limit-text">口碑：<i class="icon iconfont star">&#xe641;</i><i class="icon iconfont unstar">&#xe642;</i><em style="color:green; padding-left:0px;font-size:16px;">99分</em></div>
@@ -131,7 +131,7 @@
                 <span style="color:#e57f23;">该时间段由商家配送至楼下，可预订送寝室</span>
                 <span class="goods-sale">月售100份</span>
             </a>
-            <a href="./shopInfo.html" class="goods-list">
+            <a href="./shopInfo.html?c=dining&a=shopInfo&shop_id=4" class="goods-list">
                 <img src="../image/20170523113702287_thumb.jpg" class="goods-img" />
                 <div class="goods-name limit-text">饭菜真湘</div>
                 <div class="goods-address limit-text">口碑：<i class="icon iconfont star">&#xe641;</i><i class="icon iconfont unstar">&#xe642;</i><em style="color:green; padding-left:0px;font-size:16px;">99分</em></div>
@@ -141,7 +141,7 @@
                 <span style="color:#e57f23;">该时间段由商家配送至楼下，可预订送寝室</span>
                 <span class="goods-sale">月售100份</span>
             </a>
-            <a href="./shopInfo.html" class="goods-list">
+            <a href="./shopInfo.html?c=dining&a=shopInfo&shop_id=5" class="goods-list">
                 <img src="../image/20170523113702288_thumb.jpg" class="goods-img" />
                 <div class="goods-name limit-text">辣味轩麻辣香锅</div>
                 <div class="goods-address limit-text">口碑：<i class="icon iconfont star">&#xe641;</i><i class="icon iconfont unstar">&#xe642;</i><em style="color:green; padding-left:0px;font-size:16px;">99分</em></div>
