--- a/view/index.html
+++ b/view/index.html
@@ -108,8 +108,11 @@
                 <div class="goods-address limit-text">江西师大二食堂</div>
                 <div class="goods-info limit-text">送寝室时间：8:00-12:00,14:00-17:00</div>
                 <div class="goods-price">配送费0</div>
-                <span style="color:#e57f23;">该时间段由商家配送至楼下，可预订送寝室</span>
+
                 <span class="goods-sale">月售100份</span>
+                 <span class="sender-male">男配送员：<span style="color:red;">无</span></span>&nbsp;|&nbsp;<span class="sender-female">女配送员：<span style="color:red;">无</span></span>
+                <p><span style="color:green;">该时间段由超急邦配送至寝室</span></p>
+                <span class="full-cut-price"><i class="icon iconfont item-full-cut">&#xe878;</i>全场9折</span>
             </a>
             <a href="./shopInfo.html?c=dining&a=shopInfo&shop_id=2" class="goods-list">
                 <img src="../image/20170523113702285_thumb.jpg" class="goods-img" />
@@ -118,8 +121,10 @@
                 <div class="goods-address limit-text">江西师大二食堂</div>
                 <div class="goods-info limit-text">送寝室时间：8:00-12:00,14:00-17:00</div>
                 <div class="goods-price">配送费0</div>
-                <span style="color:#e57f23;">该时间段由商家配送至楼下，可预订送寝室</span>
+
                 <span class="goods-sale">月售100份</span>
+                  <span style="color:#e57f23;">该时间段由商家配送至楼下，可预订送寝室</span>
+               <span class="full-cut-price"><i class="icon iconfont item-full-cut">&#xe878;</i>全场8.5折</span>
             </a>
             <a href="./shopInfo.html?c=dining&a=shopInfo&shop_id=3" class="goods-list">
                 <img src="../image/20170523113702286_thumb.jpg" class="goods-img" />
@@ -128,8 +133,10 @@
                 <div class="goods-address limit-text">江西师大二食堂</div>
                 <div class="goods-info limit-text">送寝室时间：8:00-12:00,14:00-17:00</div>
                 <div class="goods-price">配送费0</div>
-                <span style="color:#e57f23;">该时间段由商家配送至楼下，可预订送寝室</span>
+
                 <span class="goods-sale">月售100份</span>
+                  <span style="color:#e57f23;">该时间段由商家配送至楼下，可预订送寝室</span>
+               <span class="full-cut-price"><i class="icon iconfont item-full-cut">&#xe878;</i>全场8.5折</span>
             </a>
             <a href="./shopInfo.html?c=dining&a=shopInfo&shop_id=4" class="goods-list">
                 <img src="../image/20170523113702287_thumb.jpg" class="goods-img" />
@@ -138,8 +145,10 @@
                 <div class="goods-address limit-text">江西师大二食堂</div>
                 <div class="goods-info limit-text">送寝室时间：8:00-12:00,14:00-17:00</div>
                 <div class="goods-price">配送费0</div>
-                <span style="color:#e57f23;">该时间段由商家配送至楼下，可预订送寝室</span>
+
                 <span class="goods-sale">月售100份</span>
+                <span style="color:#e57f23;">该时间段由商家配送至楼下，可预订送寝室</span>
+               <span class="full-cut-price"><i class="icon iconfont item-full-cut">&#xe878;</i>全场8.5折</span>
             </a>
             <a href="./shopInfo.html?c=dining&a=shopInfo&shop_id=5" class="goods-list">
                 <img src="../image/20170523113702288_thumb.jpg" class="goods-img" />
@@ -148,8 +157,11 @@
                 <div class="goods-address limit-text">江西师大二食堂</div>
                 <div class="goods-info limit-text">送寝室时间：8:00-12:00,14:00-17:00</div>
                 <div class="goods-price">配送费0</div>
-                <span style="color:#e57f23;">该时间段由商家配送至楼下，可预订送寝室</span>
+
                 <span class="goods-sale">月售100份</span>
+                 <span class="sender-male">男配送员：<span style="color:green;">有</span></span>&nbsp;|&nbsp;<span class="sender-female">女配送员：<span style="color:green">有</span></span>
+                <p><span style="color:green;">该时间段由超急邦配送至寝室</span></p>
+                <span class="full-cut-price"><i class="icon iconfont item-discount">&#xe7fe;</i>满200减50</span>
             </a>
             <div id="get-more"></div>
         </div>
