--- a/view/myJifen.html
+++ b/view/myJifen.html
@@ -49,7 +49,7 @@
 <script src="../js/jquery-1.11.0.js"></script>
 <script>
     $('.exchange-btn').click(function(){
-        window.open('./exchange.html');
+        window.open('./exchange.html', '_self');
     });
 
 </script>
