--- a/view/shopInfo.html
+++ b/view/shopInfo.html
@@ -154,7 +154,7 @@
 
         <div class="bottomNav cf">
             <a>总计：<i class="icon iconfont">&#xe604;</i><span class="cart-total-price">0</span></a>
-            <a class="payment able" data-price="0"><i class="icon iconfont">&#xe6ca;</i>去付款</a>
+            <a class="payment able" data-price="0" href="./confirmOrder.html"><i class="icon iconfont">&#xe6ca;</i>去付款</a>
         </div>
         <!--购物车-->
         <div class="cart-wrap">
